--- a/src/org/yccheok/jstock/gui/LoadFromCloudJDialog.form
+++ b/src/org/yccheok/jstock/gui/LoadFromCloudJDialog.form
@@ -1,4 +1,4 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.5" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
@@ -168,7 +168,7 @@
           <Properties>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                <TitledBorder title="Google Doc Account">
+                <TitledBorder title="Google Drive Account">
                   <ResourceString PropertyName="titleX" bundle="org/yccheok/jstock/data/gui.properties" key="LoadFromCloudJDialog_GoogleAccount" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
                 </TitledBorder>
               </Border>
