--- a/src/org/yccheok/jstock/gui/StockDatabaseJDialog.form
+++ b/src/org/yccheok/jstock/gui/StockDatabaseJDialog.form
@@ -1,4 +1,4 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.5" maxVersion="1.6" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <NonVisualComponents>
@@ -25,6 +25,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <Events>
     <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="formMouseClicked"/>
@@ -40,7 +41,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,24,0,0,1,-9"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,24,0,0,3,14"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
@@ -89,72 +90,11 @@
         <Property name="rows" type="int" value="1"/>
       </Layout>
       <SubComponents>
-        <Container class="javax.swing.JPanel" name="jPanel1">
-          <Properties>
-            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-              <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                <TitledBorder title="Stock Exchange Server (Read only)">
-                  <ResourceString PropertyName="titleX" bundle="org/yccheok/jstock/data/gui.properties" key="StockDatabaseJDialog_StockExchangeServer" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
-                </TitledBorder>
-              </Border>
-            </Property>
-          </Properties>
-
-          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
-          <SubComponents>
-            <Container class="javax.swing.JScrollPane" name="jScrollPane1">
-              <AuxValues>
-                <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
-              </AuxValues>
-              <Constraints>
-                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
-                  <BorderConstraints direction="Center"/>
-                </Constraint>
-              </Constraints>
-
-              <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
-              <SubComponents>
-                <Component class="javax.swing.JTable" name="jTable1">
-                  <Properties>
-                    <Property name="autoCreateRowSorter" type="boolean" value="true"/>
-                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                      <Connection code="getSystemDefinedStockInfoTableModel()" type="code"/>
-                    </Property>
-                  </Properties>
-                  <AuxValues>
-                    <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="this.jTable1.setDefaultRenderer(Symbol.class, new StockTableCellRenderer());&#xd;&#xa;this.jTable1.setDefaultRenderer(Code.class, new StockTableCellRenderer());"/>
-                  </AuxValues>
-                </Component>
-              </SubComponents>
-            </Container>
-            <Container class="javax.swing.JPanel" name="jPanel3">
-              <Constraints>
-                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
-                  <BorderConstraints direction="North"/>
-                </Constraint>
-              </Constraints>
-
-              <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
-              <SubComponents>
-                <Component class="javax.swing.JTextField" name="jTextField1">
-                  <Properties>
-                    <Property name="columns" type="int" value="10"/>
-                  </Properties>
-                  <AuxValues>
-                    <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="jTextField1.getDocument().addDocumentListener(&#xd;&#xa;    new DocumentListener() {&#xd;&#xa;        public void changedUpdate(DocumentEvent e) {&#xd;&#xa;            newFilter();&#xd;&#xa;        }&#xd;&#xa;        public void insertUpdate(DocumentEvent e) {&#xd;&#xa;            newFilter();&#xd;&#xa;        }&#xd;&#xa;        public void removeUpdate(DocumentEvent e) {&#xd;&#xa;            newFilter();&#xd;&#xa;        }&#xd;&#xa;    });"/>
-                  </AuxValues>
-                </Component>
-              </SubComponents>
-            </Container>
-          </SubComponents>
-        </Container>
         <Container class="javax.swing.JPanel" name="jPanel2">
           <Properties>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-              <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                <TitledBorder title="User Defined">
-                  <ResourceString PropertyName="titleX" bundle="org/yccheok/jstock/data/gui.properties" key="StockDatabaseJDialog_UserDefined" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
-                </TitledBorder>
+              <Border info="org.netbeans.modules.form.compat2.border.EmptyBorderInfo">
+                <EmptyBorder/>
               </Border>
             </Property>
           </Properties>
@@ -178,14 +118,20 @@
                   <Properties>
                     <Property name="autoCreateRowSorter" type="boolean" value="true"/>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                      <Connection code="getUserDefinedStockInfoTableModel()" type="code"/>
+                      <Connection code="getStockInfoTableModel()" type="code"/>
+                    </Property>
+                    <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
+                      <TableColumnModel selectionModel="0"/>
+                    </Property>
+                    <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
+                      <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                     </Property>
                   </Properties>
                   <Events>
                     <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTable2KeyPressed"/>
                   </Events>
                   <AuxValues>
-                    <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="this.jTable2.addMouseListener(new TableRowPopupListener());&#xd;&#xa;this.jTable2.setDefaultRenderer(Code.class, new StockTableCellRenderer());&#xd;&#xa;this.jTable2.setDefaultRenderer(Symbol.class, new StockTableCellRenderer());&#xd;&#xa;this.jTable2.setDefaultEditor(Code.class, this.getCellEditor(Code.class));&#xd;&#xa;this.jTable2.setDefaultEditor(Symbol.class, this.getCellEditor(Symbol.class));&#xd;&#xa;//this.jTable2.setDefaultEditor(Object.class, this.getSymbolCellEditor());"/>
+                    <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="this.jTable2.addMouseListener(new TableRowPopupListener());&#xa;this.jTable2.setDefaultRenderer(Code.class, new StockTableCellRenderer());&#xa;this.jTable2.setDefaultRenderer(String.class, new StockTableCellRenderer());&#xa;this.jTable2.setDefaultRenderer(StockInfo.Board.class, new StockTableCellRenderer());&#xa;this.jTable2.setDefaultRenderer(StockInfo.Industry.class, new StockTableCellRenderer());&#xa;this.jTable2.setDefaultEditor(Code.class, this.getCellEditor(Code.class));&#xa;this.jTable2.setDefaultEditor(String.class, this.getCellEditor(String.class));&#xa;this.jTable2.setDefaultEditor(StockInfo.Board.class, this.getCellEditor(StockInfo.Board.class));&#xa;this.jTable2.setDefaultEditor(StockInfo.Industry.class, this.getCellEditor(StockInfo.Industry.class));&#xa;//this.jTable2.setDefaultEditor(Object.class, this.getSymbolCellEditor());"/>
                   </AuxValues>
                 </Component>
               </SubComponents>
