--- a/src/org/yccheok/jstock/gui/StockJDialog.form
+++ b/src/org/yccheok/jstock/gui/StockJDialog.form
@@ -1,4 +1,4 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.3" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <NonVisualComponents>
@@ -14,6 +14,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -201,9 +202,9 @@
                       </Group>
                       <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jCheckBox27" alignment="0" pref="86" max="32767" attributes="1"/>
-                          <Component id="jCheckBox23" alignment="0" pref="86" max="32767" attributes="1"/>
-                          <Component id="jCheckBox21" alignment="0" pref="86" max="32767" attributes="1"/>
+                          <Component id="jCheckBox27" alignment="0" max="32767" attributes="1"/>
+                          <Component id="jCheckBox23" alignment="0" max="32767" attributes="1"/>
+                          <Component id="jCheckBox21" alignment="0" max="32767" attributes="1"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
